--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .invitation {
   width: 500px;
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -58,7 +58,7 @@ body {
   left: 0;
   border-bottom: 0px solid transparent;
   border-top: 307.6923076923px solid transparent;
-  border-left: 500px solid #ff1d23;
+  border-left: 500px solid #ff3237;
   z-index: 1;
 }
 
@@ -68,7 +68,7 @@ body {
   border-left: 250px solid transparent;
   position: absolute;
   left: 0;
-  top: 0;
+  top: 1px;
   transform-origin: 50% 0%;
   z-index: 2;
 }
@@ -91,7 +91,7 @@ body {
 .card {
   position: relative;
   width: 480px;
-  height: 670px;
+  height: 602px;
   margin: auto;
   transform-style: preserve-3d;
   transform-origin: 50% 10%;
@@ -99,7 +99,7 @@ body {
 }
 
 .face {
-  top: 0;
+  top: 60px;
   right: 0;
   bottom: 0;
   left: 0;
@@ -112,9 +112,6 @@ body {
   background-size: 130% auto;
 }
 
-.front {
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/39132/poke-bg.gif);
-}
 .front h1 {
   position: relative;
   font: normal 3em/0.9 "Slackey", sans-serif;
@@ -125,9 +122,11 @@ body {
   -webkit-font-smoothing: subpixel-antialiased;
 }
 .front h1 img {
-  width: 90%;
+  width: 100%;
   display: block;
   margin: auto;
+  height: 80%;
+  
 }
 .front h1 span {
   display: block;
@@ -142,22 +141,22 @@ body {
 }
 
 .face.back {
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/39132/poke-bg.jpg);
   color: #000;
   overflow: hidden;
 }
 .face.back img {
   position: absolute;
-  top: 60px;
   display: inline-block;
-  width: 90%;
+  top:30px;
+  width: 100%;
   left: 50%;
   transform: translate(-50%, 0);
+
 }
 
 button {
   font: normal 1.25em "Karla", sans-serif;
-  padding: 15px 30px;
+  padding: 10px;
   border-radius: 30px;
   background: #ffce00;
   color: #ff3c41;
@@ -175,15 +174,15 @@ button {
 button.invert {
   color: #ffce00;
   background: #ef0006;
+  margin-top: 5px;
 }
-.image1{
+.image1 {
   padding: 15px 30px;
   border-radius: 30px;
-  position:fixed;
+  position: fixed;
   left: 50%;
   top: 260px;
   transform: translate(-50%, -50%);
   transform-origin: 50% 50%;
   z-index: 1;
-
 }
